--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,13 +6,9 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-      # platforms:
-      #   - linux/amd64
+      platforms:
+        - linux/amd64
     image: registry.cn-shanghai.aliyuncs.com/glinfen/proxy
-    # env_file:
-    #   - .env
-    environment:
-      - HTTP_PROXY=http://proxy:7890
     ports:
       - '7890:7890'
     networks:
